/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 15:50 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2021-05-25 15:22 UTC+0300 Alexander Kresin <alex@belacy.ru>
  * source/gtk/hownbtn.prg
  * source/winapi/hownbtn.prg
    ! Bug fixed.

2021-05-21 10:15 UTC+0300 Alexander Kresin <alex@belacy.ru>
  * source/gtk/htimer.prg
  * source/winapi/htimer.prg
    ! Bug fixed.

2021-05-19 15:10 UTC+0200 Wilfried Brunken DF7BE
  * utils/dbc/dbchw.hbp
  * utils/tutorial/hwgrun.hbp
  * utils/tutorial/tutor.hbp
    ! Ticket #90: tutor, dbchw error creating  
    ! dbchw and tutor ready for OS freebsd 13.0:
    ! The macro for unix has also effect on LINUX 

2021-05-16 15:05 UTC+0200 Wilfried Brunken DF7BE
  * install.txt
    ! Additional instructions for
    ! Ubuntu 20.04.2.0 LTS:
    ! Missing "canberra-gtk-module".    

2021-05-12 11:30 UTC+0300 Alexander Kresin <alex@belacy.ru>
  * contrib/gthwg/gt_hwg.prg
    * hb_gt_win() and hb_gt_win_default() added to get rid off 'ANNOUNCE HB_GTSYS' declaration.
  * contrib/gthwg/tests/test1.prg
    * 'ANNOUNCE HB_GTSYS' removed.
  * contrib/makefile.linux
    * gtk2 headers added

2021-05-08 09:05 UTC+0300 Alexander Kresin <alex@belacy.ru>
  * contrib/gthwg/gt_hwg.prg
    * hb_gt_cgi() and hb_gt_cgi_default() added to prevent gtcgi to be default for Linux GTK version.
  * contrib/gthwg/gt_hwgui_l.c
    * Small correction for Alt+ return codes.

2021-05-07 20:18 UTC+0300 Alexander Kresin <alex@belacy.ru>
  * contrib/gthwg/gt_hwg.prg
    * cTitle parameter added to gthwg_CreateWindow()

2021-05-07 19:28 UTC+0300 Alexander Kresin <alex@belacy.ru>
  * contrib/gthwg/gt_hwgui_l.c
    ! Warnings fixed.
  * contrib/gthwg.hbp
    ! gtk2 headers added for Linux version

2021-05-07 14:42 UTC+0300 Alexander Kresin <alex@belacy.ru>
  * contrib/gthwg/gt_hwgui_l.c
    * "Destroy" signal handling added.
  * source/gtk/menu_c.c