@@ -8,6 +8,10 @@
    2002-12-01 15:50 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2021-06-06 14:42 UTC+0300 Alexander Kresin <alex@belacy.ru>
+  * contrib/gthwg/gt_hwgui_l.c
+    * Colors definition changed to satisfy some compilers
+
 2021-05-25 15:22 UTC+0300 Alexander Kresin <alex@belacy.ru>
   * source/gtk/hownbtn.prg
   * source/winapi/hownbtn.prg
